--- a/css/style.css
+++ b/css/style.css
@@ -616,3 +616,21 @@ nav li a:hover {
 }
 
 .checkinslist h3 { color: #657B83; }
+
+input.ng-invalid.ng-touched {
+  border: 1px solid #DA3637;
+}
+
+input.ng-valid {
+  border: 1px solid #509D12;
+}
+
+.ng-invalid .btn {
+  background-color: grey; 
+}
+
+.error {
+  color: red;
+  padding-bottom: 10px; 
+}
+
